Bug 7470 - Vtable: virtual function pointers not in declaration order
Summary: Vtable: virtual function pointers not in declaration order
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: c++ (show other bugs)
Version: 3.1.1
: P3 normal
Target Milestone: ---
Assignee: Nathan Sidwell
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2002-08-02 02:36 UTC by grigory
Modified: 2003-07-25 17:33 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description grigory 2002-08-02 02:36:01 UTC
The C++ ABI defines order of virtual function pointers in such way:
"2.5.2 Virtual Table Components and Order 
The order of the virtual function pointers in a virtual table is the order of declaration of the corresponding member functions in the class. There is an entry for any virtual function declared in a class, whether it is a new function or overrides a base class function, unless it overrides a function from the primary base, and conversion between their return types does not require an adjustment."

*** G++ 3.1.1 compiler violates given rules ***

Let's consider the example. 

--- fail.cpp ----------------------
	struct base 
	{
		short b;
		virtual int foo() {}
	};

	struct derived:  virtual base
	{
		int d;
		virtual int foo() {}
		virtual int bar() {}
	};
-----------------------------------

Note that function declaration order is "foo, bar" and 'base' is not the primary base class for 'derived', since it's not nearly empty class.

New we check the virtual table for 'derived' class using "g++-3.1.1 -c -fdump-class-hierarchy fail.cpp".
The virtual table is:

	Vtable for derived
	derived::_ZTV7derived: 9 entries
	0     8
	4     0
	8     &_ZTI7derived
	12    derived::bar()
	16    derived::foo()
	20    0fffffff8
	24    0fffffff8
	28    &_ZTI7derived
	32    derived::_ZTv0_n12_N7derived3fooEv()

We see that virtual functions appear in the order "bar, foo" which is wrong. It's expected to have functions in the declaration order as spcified by the ABI.

Release:
3.1.1

Environment:
Red Hat Linux release 7.1 (Seawolf)
Kernel 2.4.2-2smp on a 2-processor i686

gcc version 3.1.1
Configured with: ./configure --prefix=/usr/local --program-suffix=-3.1.1 --enable-threads
Thread model: posix

How-To-Repeat:
1. Compile given testcase
g++-3.1.1 -c -fdump-class-hierarchy fail.cpp

2. Look for 'derived' virtual table in the produced fail.cpp.class file
Comment 1 Nathan Sidwell 2002-08-02 03:54:24 UTC
State-Changed-From-To: open->analyzed
State-Changed-Why: confirmed. an ABI bug
Comment 2 Nathan Sidwell 2002-08-02 08:04:24 UTC
Responsible-Changed-From-To: unassigned->nathan
Responsible-Changed-Why: patching
Comment 3 Nathan Sidwell 2002-09-13 16:52:40 UTC
State-Changed-From-To: analyzed->closed
State-Changed-Why: now fixed